# task6-sockets-sys-prog

./: Cargo.toml  Makefile  README.md  build.rs  client.cpp  client.rs  message.proto  server.cpp  server.rs  utils.cpp  utils.h  utils.rs
tests/: Makefile  socketsupport.py  test_client_multithreaded.py  test_client_singlethreaded.py  test_client_testserver.cpp  test_server_multithreaded.py  test_server_singlethreaded.py
