[package]
name = "task6-sockets"
edition = "2018"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "utils"
path = "utils.rs"
crate-type = ["cdylib"]

[[bin]]
name = "client"
path = "client.rs"

[[bin]]
name = "server"
path = "server.rs"

[dependencies]
clap = "2.33.3"
nix = "0.23.0"
prost = "0.9.0"

[build-dependencies]
prost-build = "0.9.0"
